sumo/tests/traci/VariableRetrieval/Polygon/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 168 255 dummy
simstep 6 1
